--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    Hi! I am Prakriti.
+    Hi! I am Prakriti.</br>
+    I am from India.
+</body>
 </body>
 </html>
