--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     Hi! I am Prakriti.</br>
-    I am from India.
+    I am from India.</br>
+    I have worked on few CLI apps. I will showcase it tomorrow.
 </body>
 </body>
 </html>
