--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     Hi! I am Prakriti.</br>
     I am from India.</br>
     I have worked on few CLI apps. I will showcase it tomorrow.
+    Teamwork is important for we developers.
 </body>
 </body>
 </html>
