--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     Hi! I am Prakriti.</br>
     I am from India.</br>
-    I have worked on few CLI apps. I will showcase it tomorrow.
-    Teamwork is important for web developers.
+    I have worked on few CLI apps. I will showcase it tomorrow.</br>
+    Teamwork is important for web developers. 
 </body>
 </body>
 </html>
